--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://uqload.co/hkot0o0d25ct.html" target=_blank><img src="https://en1.uqload.co/i/01/02081/hkot0o0d25ct_t.jpg"><br>(LEAKED) Cat In Microwave Scary Content 18 Full Video Hd Clips 247 Twitter – Viral & trending (1)</a><br>[176x384, 01:03]
+<IFRAME SRC="https://uqload.co/embed-hkot0o0d25ct.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
